# splunk-app-packager

./: .gitignore  LICENCE  README.md  acs.py  action.yml  package.py  pyproject.toml  requirements.txt
.github/: CODEOWNERS  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  codeql-config.yaml  dependabot.yml
.github/workflows/: codeql.yml  flake8.yml  release.yml  status-checks-replacement-codeql.yml  status-checks-replacement-verify_tags.yml  tag_workflow.yml  verify_tags.yml
src/splunk_app_packager/: acs.py  jinja_replace_dict.py  package.py
